fixed rep link overflow bug

--- a/src/components/ListPage/ListPage.module.css
+++ b/src/components/ListPage/ListPage.module.css
@@ -8,6 +8,7 @@
 
 .repository a {
     color: #fff;
+    word-break: break-all;
 }
 
 .stars {
